# todo-flow

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  generate-icons.js  index.html  introduce.docx  package-lock.json  package.json  plan.md  vite.config.js
.claude/: launch.json  settings.local.json
.claude/skills/claude-daily-report/: SKILL.md
.github/workflows/: build.yml
daily-reports/: 2026-06-17.md
releases/: latest.json
scripts/: start-tauri.mjs
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json  update-key.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: SettingsPanel.vue  TodoFilters.vue  TodoInput.vue  TodoItem.vue  TodoList.vue  TodoStats.vue
src/composables/: useSettings.js  useTodos.js
src/utils/: tauriBridge.js
