[package]
name = "todo-flow"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "A beautiful todo management desktop app for Windows 11"
authors = ["Todo Flow"]
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[build]
rustflags = []
